⚡ Otimização do build.py para gerar centenas de páginas por dia
Melhorias implementadas:
✅ build.py otimizado (2,369 pág/seg)
✅ Geração automática de index.html com busca em tempo real
✅ Sistema de filtro JavaScript por palavras-chave
✅ Emojis dinâmicos por categoria
✅ SEO completo (meta tags, Open Graph, Schema.org)
✅ Sanitização de HTML/caracteres especiais
✅ Estatísticas de performance

Novos arquivos:
✅ generate_csv.py - Gerar múltiplas combinações de integrações
✅ BUILD_GUIDE.md - Documentação detalhada do build.py
✅ SCALABILITY_GUIDE.md - Guia para escalar para 100k+ páginas

Demonstração prática:
- 20 páginas originais em 0.03s
- 69 páginas (20+49 novas) em 0.03s
- Taxa: 2,369 páginas/segundo
- Escalável para 100k+ páginas em ~42 segundos

--- a/integracoes/facebook-ads-para-google-sheets-n8n.html
+++ b/integracoes/facebook-ads-para-google-sheets-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como salvar leads do Facebook Ads no Google Sheets automaticamente com N8N",
       "description": "Automatize o registro de cada novo lead do Facebook em uma planilha mestre do Google Sheets.",
       "step": [
-        { "@type": "HowToStep", "text": "Trigger Facebook Lead" },
-{ "@type": "HowToStep", "text": "Limpar dados recebidos" },
-{ "@type": "HowToStep", "text": "Verificar se email já existe na planilha" },
-{ "@type": "HowToStep", "text": "Adicionar nova linha (Append)" }
+        {"@type": "HowToStep", "text": "Trigger Facebook Lead"},
+{"@type": "HowToStep", "text": "Limpar dados recebidos"},
+{"@type": "HowToStep", "text": "Verificar se email já existe na planilha"},
+{"@type": "HowToStep", "text": "Adicionar nova linha (Append)"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Trigger Facebook Lead</li><li class="mb-2">Limpar dados recebidos</li><li class="mb-2">Verificar se email já existe na planilha</li><li class="mb-2">Adicionar nova linha (Append)</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Trigger Facebook Lead</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Limpar dados recebidos</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Verificar se email já existe na planilha</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Adicionar nova linha (Append)</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">marketing</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">dados</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">sheets</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">marketing</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">dados</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">sheets</span>
                         </div>
                     </div>
 
