--- a/integracoes/facebook-ads-para-whatsapp-chatwoot-n8n.html
+++ b/integracoes/facebook-ads-para-whatsapp-chatwoot-n8n.html
@@ -31,11 +31,11 @@
       "name": "Como enviar leads do Facebook Ads para o WhatsApp (Chatwoot) usando N8N",
       "description": "Aprenda a capturar leads do Facebook e iniciar conversas no WhatsApp via Chatwoot em tempo real.",
       "step": [
-        { "@type": "HowToStep", "text": "Conectar Trigger Facebook" },
-{ "@type": "HowToStep", "text": "Formatar telefone (55+DDD)" },
-{ "@type": "HowToStep", "text": "Buscar contato no Chatwoot" },
-{ "@type": "HowToStep", "text": "Criar conversa na Inbox" },
-{ "@type": "HowToStep", "text": "Enviar mensagem template" }
+        {"@type": "HowToStep", "text": "Conectar Trigger Facebook"},
+{"@type": "HowToStep", "text": "Formatar telefone (55+DDD)"},
+{"@type": "HowToStep", "text": "Buscar contato no Chatwoot"},
+{"@type": "HowToStep", "text": "Criar conversa na Inbox"},
+{"@type": "HowToStep", "text": "Enviar mensagem template"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -143,7 +143,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Conectar Trigger Facebook</li><li class="mb-2">Formatar telefone (55+DDD)</li><li class="mb-2">Buscar contato no Chatwoot</li><li class="mb-2">Criar conversa na Inbox</li><li class="mb-2">Enviar mensagem template</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Conectar Trigger Facebook</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Formatar telefone (55+DDD)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Buscar contato no Chatwoot</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Criar conversa na Inbox</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">5</span><span>Enviar mensagem template</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -189,7 +189,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">marketing</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">vendas</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">chatwoot</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">marketing</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">vendas</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">chatwoot</span>
                         </div>
                     </div>
 
