--- a/integracoes/gmail-para-openai-classificacao-n8n.html
+++ b/integracoes/gmail-para-openai-classificacao-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como classificar emails recebidos no Gmail usando Inteligência Artificial e N8N",
       "description": "Use o GPT para ler seus emails, classificar como 'Fatura', 'Suporte' ou 'Spam' e aplicar etiquetas.",
       "step": [
-        { "@type": "HowToStep", "text": "Gmail Trigger (Email Received)" },
-{ "@type": "HowToStep", "text": "Extrair corpo do texto" },
-{ "@type": "HowToStep", "text": "Prompt OpenAI (Classificar)" },
-{ "@type": "HowToStep", "text": "Gmail Action (Add Label)" }
+        {"@type": "HowToStep", "text": "Gmail Trigger (Email Received)"},
+{"@type": "HowToStep", "text": "Extrair corpo do texto"},
+{"@type": "HowToStep", "text": "Prompt OpenAI (Classificar)"},
+{"@type": "HowToStep", "text": "Gmail Action (Add Label)"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Gmail Trigger (Email Received)</li><li class="mb-2">Extrair corpo do texto</li><li class="mb-2">Prompt OpenAI (Classificar)</li><li class="mb-2">Gmail Action (Add Label)</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Gmail Trigger (Email Received)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Extrair corpo do texto</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Prompt OpenAI (Classificar)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Gmail Action (Add Label)</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">ia</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">produtividade</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">email</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">ia</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">produtividade</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">email</span>
                         </div>
                     </div>
 
