--- a/integracoes/google-forms-para-whatsapp-kommo-n8n.html
+++ b/integracoes/google-forms-para-whatsapp-kommo-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como receber notificações no WhatsApp via Kommo para respostas do Google Forms",
       "description": "Seja avisado no WhatsApp sempre que um formulário importante for preenchido no Google Forms.",
       "step": [
-        { "@type": "HowToStep", "text": "Trigger Google Forms (via Sheets ou Webhook)" },
-{ "@type": "HowToStep", "text": "Validar resposta" },
-{ "@type": "HowToStep", "text": "Criar nota no Kommo CRM" },
-{ "@type": "HowToStep", "text": "Disparar mensagem WhatsApp" }
+        {"@type": "HowToStep", "text": "Trigger Google Forms (via Sheets ou Webhook)"},
+{"@type": "HowToStep", "text": "Validar resposta"},
+{"@type": "HowToStep", "text": "Criar nota no Kommo CRM"},
+{"@type": "HowToStep", "text": "Disparar mensagem WhatsApp"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Trigger Google Forms (via Sheets ou Webhook)</li><li class="mb-2">Validar resposta</li><li class="mb-2">Criar nota no Kommo CRM</li><li class="mb-2">Disparar mensagem WhatsApp</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Trigger Google Forms (via Sheets ou Webhook)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Validar resposta</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Criar nota no Kommo CRM</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Disparar mensagem WhatsApp</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">notificacao</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">crm</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">kommo</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">notificacao</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">crm</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">kommo</span>
                         </div>
                     </div>
 
