--- a/integracoes/hubspot-para-postgresql-backup-n8n.html
+++ b/integracoes/hubspot-para-postgresql-backup-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como sincronizar contatos do HubSpot com banco PostgreSQL via N8N",
       "description": "Mantenha um data warehouse atualizado sincronizando seus contatos do HubSpot com um banco SQL.",
       "step": [
-        { "@type": "HowToStep", "text": "HubSpot Trigger/Cron" },
-{ "@type": "HowToStep", "text": "Mapear colunas" },
-{ "@type": "HowToStep", "text": "Executar Query (Upsert) no Postgres" },
-{ "@type": "HowToStep", "text": "Logar resultado" }
+        {"@type": "HowToStep", "text": "HubSpot Trigger/Cron"},
+{"@type": "HowToStep", "text": "Mapear colunas"},
+{"@type": "HowToStep", "text": "Executar Query (Upsert) no Postgres"},
+{"@type": "HowToStep", "text": "Logar resultado"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">HubSpot Trigger/Cron</li><li class="mb-2">Mapear colunas</li><li class="mb-2">Executar Query (Upsert) no Postgres</li><li class="mb-2">Logar resultado</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>HubSpot Trigger/Cron</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Mapear colunas</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Executar Query (Upsert) no Postgres</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Logar resultado</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">dados</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">bi</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">crm</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">dados</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">bi</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">crm</span>
                         </div>
                     </div>
 
