--- a/integracoes/instagram-para-chatgpt-bot-n8n.html
+++ b/integracoes/instagram-para-chatgpt-bot-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como criar um bot de Instagram Direct com ChatGPT usando N8N",
       "description": "Responda dúvidas frequentes no Instagram 24/7 usando a inteligência do ChatGPT conectada ao N8N.",
       "step": [
-        { "@type": "HowToStep", "text": "Instagram Webhook" },
-{ "@type": "HowToStep", "text": "Verificar se é mensagem de texto" },
-{ "@type": "HowToStep", "text": "Enviar para OpenAI" },
-{ "@type": "HowToStep", "text": "Responder usuário via API Graph" }
+        {"@type": "HowToStep", "text": "Instagram Webhook"},
+{"@type": "HowToStep", "text": "Verificar se é mensagem de texto"},
+{"@type": "HowToStep", "text": "Enviar para OpenAI"},
+{"@type": "HowToStep", "text": "Responder usuário via API Graph"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Instagram Webhook</li><li class="mb-2">Verificar se é mensagem de texto</li><li class="mb-2">Enviar para OpenAI</li><li class="mb-2">Responder usuário via API Graph</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Instagram Webhook</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Verificar se é mensagem de texto</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Enviar para OpenAI</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Responder usuário via API Graph</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">social</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">ia</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">chatbot</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">social</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">ia</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">chatbot</span>
                         </div>
                     </div>
 
