--- a/integracoes/jira-para-slack-bugs-criticos-n8n.html
+++ b/integracoes/jira-para-slack-bugs-criticos-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como alertar canal do Slack sobre tickets críticos criados no Jira com N8N",
       "description": "Mantenha o time de engenharia alerta enviando notificações urgentes para bugs de alta prioridade.",
       "step": [
-        { "@type": "HowToStep", "text": "Jira Trigger (Issue Created)" },
-{ "@type": "HowToStep", "text": "If Priority = High" },
-{ "@type": "HowToStep", "text": "Buscar responsável" },
-{ "@type": "HowToStep", "text": "Enviar mensagem formatada no Slack" }
+        {"@type": "HowToStep", "text": "Jira Trigger (Issue Created)"},
+{"@type": "HowToStep", "text": "If Priority = High"},
+{"@type": "HowToStep", "text": "Buscar responsável"},
+{"@type": "HowToStep", "text": "Enviar mensagem formatada no Slack"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Jira Trigger (Issue Created)</li><li class="mb-2">If Priority = High</li><li class="mb-2">Buscar responsável</li><li class="mb-2">Enviar mensagem formatada no Slack</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Jira Trigger (Issue Created)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>If Priority = High</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Buscar responsável</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Enviar mensagem formatada no Slack</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">dev</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">agile</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">bugs</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">dev</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">agile</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">bugs</span>
                         </div>
                     </div>
 
