--- a/integracoes/mercado-livre-para-bling-nfe-n8n.html
+++ b/integracoes/mercado-livre-para-bling-nfe-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como integrar pedidos do Mercado Livre ao Bling para NF-e usando N8N",
       "description": "Conecte as APIs do Mercado Livre e Bling para automatizar a criação de pedidos e notas fiscais.",
       "step": [
-        { "@type": "HowToStep", "text": "Cron (a cada 10min)" },
-{ "@type": "HowToStep", "text": "Listar vendas recentes ML" },
-{ "@type": "HowToStep", "text": "Verificar existência no Bling" },
-{ "@type": "HowToStep", "text": "Criar Pedido de Venda" }
+        {"@type": "HowToStep", "text": "Cron (a cada 10min)"},
+{"@type": "HowToStep", "text": "Listar vendas recentes ML"},
+{"@type": "HowToStep", "text": "Verificar existência no Bling"},
+{"@type": "HowToStep", "text": "Criar Pedido de Venda"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Cron (a cada 10min)</li><li class="mb-2">Listar vendas recentes ML</li><li class="mb-2">Verificar existência no Bling</li><li class="mb-2">Criar Pedido de Venda</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Cron (a cada 10min)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Listar vendas recentes ML</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Verificar existência no Bling</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Criar Pedido de Venda</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">ecommerce</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">brasil</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">fiscal</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">ecommerce</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">brasil</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">fiscal</span>
                         </div>
                     </div>
 
