--- a/integracoes/rd-station-para-pipedrive-n8n.html
+++ b/integracoes/rd-station-para-pipedrive-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como criar negócios no Pipedrive a partir de leads do RD Station com N8N",
       "description": "Garanta que nenhuma oportunidade se perca: crie Deals no Pipedrive assim que o lead converter no RD.",
       "step": [
-        { "@type": "HowToStep", "text": "Receber Lead RD" },
-{ "@type": "HowToStep", "text": "Buscar Pessoa no Pipedrive (por email)" },
-{ "@type": "HowToStep", "text": "Se não existir, criar Pessoa" },
-{ "@type": "HowToStep", "text": "Criar Deal no funil de entrada" }
+        {"@type": "HowToStep", "text": "Receber Lead RD"},
+{"@type": "HowToStep", "text": "Buscar Pessoa no Pipedrive (por email)"},
+{"@type": "HowToStep", "text": "Se não existir, criar Pessoa"},
+{"@type": "HowToStep", "text": "Criar Deal no funil de entrada"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Receber Lead RD</li><li class="mb-2">Buscar Pessoa no Pipedrive (por email)</li><li class="mb-2">Se não existir, criar Pessoa</li><li class="mb-2">Criar Deal no funil de entrada</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Receber Lead RD</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Buscar Pessoa no Pipedrive (por email)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Se não existir, criar Pessoa</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Criar Deal no funil de entrada</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">vendas</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">crm</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">pipedrive</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">vendas</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">crm</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">pipedrive</span>
                         </div>
                     </div>
 
