--- a/integracoes/rd-station-para-slack-leads-qualificados-n8n.html
+++ b/integracoes/rd-station-para-slack-leads-qualificados-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como enviar leads qualificados do RD Station para o Slack usando N8N",
       "description": "Avise os vendedores instantaneamente no Slack quando um lead atingir o score de qualificação no RD.",
       "step": [
-        { "@type": "HowToStep", "text": "Webhook RD Station (Oportunidade)" },
-{ "@type": "HowToStep", "text": "Filtrar por Dono do Lead" },
-{ "@type": "HowToStep", "text": "Montar mensagem com link do CRM" },
-{ "@type": "HowToStep", "text": "Enviar DM no Slack" }
+        {"@type": "HowToStep", "text": "Webhook RD Station (Oportunidade)"},
+{"@type": "HowToStep", "text": "Filtrar por Dono do Lead"},
+{"@type": "HowToStep", "text": "Montar mensagem com link do CRM"},
+{"@type": "HowToStep", "text": "Enviar DM no Slack"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Webhook RD Station (Oportunidade)</li><li class="mb-2">Filtrar por Dono do Lead</li><li class="mb-2">Montar mensagem com link do CRM</li><li class="mb-2">Enviar DM no Slack</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Webhook RD Station (Oportunidade)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Filtrar por Dono do Lead</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Montar mensagem com link do CRM</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Enviar DM no Slack</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">vendas</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">marketing</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">b2b</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">vendas</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">marketing</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">b2b</span>
                         </div>
                     </div>
 
