--- a/integracoes/shopify-para-google-sheets-n8n.html
+++ b/integracoes/shopify-para-google-sheets-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como registrar pedidos da Shopify em uma planilha do Google Sheets com N8N",
       "description": "Mantenha seu financeiro em dia exportando cada venda da Shopify para uma linha no Excel/Sheets.",
       "step": [
-        { "@type": "HowToStep", "text": "Shopify Trigger (New Order)" },
-{ "@type": "HowToStep", "text": "Extrair itens do carrinho" },
-{ "@type": "HowToStep", "text": "Calcular total líquido" },
-{ "@type": "HowToStep", "text": "Adicionar linha no Sheets" }
+        {"@type": "HowToStep", "text": "Shopify Trigger (New Order)"},
+{"@type": "HowToStep", "text": "Extrair itens do carrinho"},
+{"@type": "HowToStep", "text": "Calcular total líquido"},
+{"@type": "HowToStep", "text": "Adicionar linha no Sheets"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Shopify Trigger (New Order)</li><li class="mb-2">Extrair itens do carrinho</li><li class="mb-2">Calcular total líquido</li><li class="mb-2">Adicionar linha no Sheets</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Shopify Trigger (New Order)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Extrair itens do carrinho</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Calcular total líquido</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Adicionar linha no Sheets</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">ecommerce</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">financeiro</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">ecommerce</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">financeiro</span>
                         </div>
                     </div>
 
