--- a/integracoes/shopify-para-slack-novas-vendas-n8n.html
+++ b/integracoes/shopify-para-slack-novas-vendas-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como receber alertas no Slack a cada nova venda na Shopify usando N8N",
       "description": "Motive seu time enviando um alerta no canal #vendas do Slack a cada novo pedido na loja.",
       "step": [
-        { "@type": "HowToStep", "text": "Shopify Trigger" },
-{ "@type": "HowToStep", "text": "Formatar mensagem com valor e produtos" },
-{ "@type": "HowToStep", "text": "Enviar para canal Slack" },
-{ "@type": "HowToStep", "text": "Adicionar reação" }
+        {"@type": "HowToStep", "text": "Shopify Trigger"},
+{"@type": "HowToStep", "text": "Formatar mensagem com valor e produtos"},
+{"@type": "HowToStep", "text": "Enviar para canal Slack"},
+{"@type": "HowToStep", "text": "Adicionar reação"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Shopify Trigger</li><li class="mb-2">Formatar mensagem com valor e produtos</li><li class="mb-2">Enviar para canal Slack</li><li class="mb-2">Adicionar reação</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Shopify Trigger</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Formatar mensagem com valor e produtos</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Enviar para canal Slack</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Adicionar reação</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">ecommerce</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">notificacao</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">cultura</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">ecommerce</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">notificacao</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">cultura</span>
                         </div>
                     </div>
 
