--- a/integracoes/stripe-para-gmail-pagamento-falho-n8n.html
+++ b/integracoes/stripe-para-gmail-pagamento-falho-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como enviar email automático para pagamentos falhos no Stripe com N8N",
       "description": "Automatize a recuperação de receita enviando emails personalizados quando um cartão é recusado no Stripe.",
       "step": [
-        { "@type": "HowToStep", "text": "Stripe Trigger (invoice.payment_failed)" },
-{ "@type": "HowToStep", "text": "Buscar dados do cliente" },
-{ "@type": "HowToStep", "text": "Gerar link de atualização de cartão" },
-{ "@type": "HowToStep", "text": "Enviar Email via Gmail" }
+        {"@type": "HowToStep", "text": "Stripe Trigger (invoice.payment_failed)"},
+{"@type": "HowToStep", "text": "Buscar dados do cliente"},
+{"@type": "HowToStep", "text": "Gerar link de atualização de cartão"},
+{"@type": "HowToStep", "text": "Enviar Email via Gmail"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Stripe Trigger (invoice.payment_failed)</li><li class="mb-2">Buscar dados do cliente</li><li class="mb-2">Gerar link de atualização de cartão</li><li class="mb-2">Enviar Email via Gmail</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Stripe Trigger (invoice.payment_failed)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Buscar dados do cliente</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Gerar link de atualização de cartão</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Enviar Email via Gmail</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">financeiro</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">saas</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">churn</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">financeiro</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">saas</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">churn</span>
                         </div>
                     </div>
 
