--- a/integracoes/telegram-para-google-drive-backup-midia-n8n.html
+++ b/integracoes/telegram-para-google-drive-backup-midia-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como salvar fotos e vídeos do Telegram no Google Drive com N8N",
       "description": "Crie um bot pessoal que salva qualquer foto ou documento que você envia para ele direto no Drive.",
       "step": [
-        { "@type": "HowToStep", "text": "Telegram Trigger" },
-{ "@type": "HowToStep", "text": "Download File" },
-{ "@type": "HowToStep", "text": "Upload to Google Drive" },
-{ "@type": "HowToStep", "text": "Responder 'Salvo com sucesso'" }
+        {"@type": "HowToStep", "text": "Telegram Trigger"},
+{"@type": "HowToStep", "text": "Download File"},
+{"@type": "HowToStep", "text": "Upload to Google Drive"},
+{"@type": "HowToStep", "text": "Responder 'Salvo com sucesso'"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Telegram Trigger</li><li class="mb-2">Download File</li><li class="mb-2">Upload to Google Drive</li><li class="mb-2">Responder 'Salvo com sucesso'</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Telegram Trigger</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Download File</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Upload to Google Drive</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Responder 'Salvo com sucesso'</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">pessoal</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">arquivos</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">backup</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">pessoal</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">arquivos</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">backup</span>
                         </div>
                     </div>
 
