--- a/integracoes/typeform-para-google-sheets-n8n.html
+++ b/integracoes/typeform-para-google-sheets-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como integrar Typeform com Google Sheets usando N8N",
       "description": "Sincronize respostas do Typeform com o Google Sheets para análise de dados rápida e eficiente.",
       "step": [
-        { "@type": "HowToStep", "text": "Webhook Typeform" },
-{ "@type": "HowToStep", "text": "Filtrar respostas incompletas" },
-{ "@type": "HowToStep", "text": "Mapear campos (Nome, Email, Respostas)" },
-{ "@type": "HowToStep", "text": "Inserir no Sheets" }
+        {"@type": "HowToStep", "text": "Webhook Typeform"},
+{"@type": "HowToStep", "text": "Filtrar respostas incompletas"},
+{"@type": "HowToStep", "text": "Mapear campos (Nome, Email, Respostas)"},
+{"@type": "HowToStep", "text": "Inserir no Sheets"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Webhook Typeform</li><li class="mb-2">Filtrar respostas incompletas</li><li class="mb-2">Mapear campos (Nome, Email, Respostas)</li><li class="mb-2">Inserir no Sheets</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Webhook Typeform</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Filtrar respostas incompletas</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Mapear campos (Nome, Email, Respostas)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Inserir no Sheets</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">formularios</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">dados</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">formularios</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">dados</span>
                         </div>
                     </div>
 
