--- a/integracoes/typeform-para-rd-station-n8n.html
+++ b/integracoes/typeform-para-rd-station-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como enviar leads do Typeform para o RD Station com N8N",
       "description": "Conecte formulários avançados do Typeform diretamente ao funil de vendas do RD Station.",
       "step": [
-        { "@type": "HowToStep", "text": "Receber dados Typeform" },
-{ "@type": "HowToStep", "text": "Identificar conversão (Evento)" },
-{ "@type": "HowToStep", "text": "Format payload para API RD Station" },
-{ "@type": "HowToStep", "text": "Enviar evento de conversão" }
+        {"@type": "HowToStep", "text": "Receber dados Typeform"},
+{"@type": "HowToStep", "text": "Identificar conversão (Evento)"},
+{"@type": "HowToStep", "text": "Format payload para API RD Station"},
+{"@type": "HowToStep", "text": "Enviar evento de conversão"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Receber dados Typeform</li><li class="mb-2">Identificar conversão (Evento)</li><li class="mb-2">Format payload para API RD Station</li><li class="mb-2">Enviar evento de conversão</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Receber dados Typeform</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Identificar conversão (Evento)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Format payload para API RD Station</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Enviar evento de conversão</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">marketing</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">crm</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">rd-station</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">marketing</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">crm</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">rd-station</span>
                         </div>
                     </div>
 
