--- a/integracoes/webhook-para-notion-n8n.html
+++ b/integracoes/webhook-para-notion-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como enviar eventos via Webhook para um banco de dados do Notion usando N8N",
       "description": "Crie um sistema de logs flexível enviando qualquer JSON via Webhook para uma tabela do Notion.",
       "step": [
-        { "@type": "HowToStep", "text": "Webhook Trigger" },
-{ "@type": "HowToStep", "text": "Validar Token de segurança" },
-{ "@type": "HowToStep", "text": "Formatar JSON para Notion Properties" },
-{ "@type": "HowToStep", "text": "Create Database Page" }
+        {"@type": "HowToStep", "text": "Webhook Trigger"},
+{"@type": "HowToStep", "text": "Validar Token de segurança"},
+{"@type": "HowToStep", "text": "Formatar JSON para Notion Properties"},
+{"@type": "HowToStep", "text": "Create Database Page"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Webhook Trigger</li><li class="mb-2">Validar Token de segurança</li><li class="mb-2">Formatar JSON para Notion Properties</li><li class="mb-2">Create Database Page</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Webhook Trigger</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Validar Token de segurança</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Formatar JSON para Notion Properties</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Create Database Page</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">dev</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">notion</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">logs</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">dev</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">notion</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">logs</span>
                         </div>
                     </div>
 
