--- a/integracoes/woocommerce-para-trello-gestao-pedidos-n8n.html
+++ b/integracoes/woocommerce-para-trello-gestao-pedidos-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como criar cards no Trello para novos pedidos do WooCommerce via N8N",
       "description": "Organize sua expedição criando cards no Trello automaticamente para cada venda no WooCommerce.",
       "step": [
-        { "@type": "HowToStep", "text": "WooCommerce Trigger" },
-{ "@type": "HowToStep", "text": "Determinar prazo de envio" },
-{ "@type": "HowToStep", "text": "Criar Card na lista 'A Enviar'" },
-{ "@type": "HowToStep", "text": "Adicionar checklist de itens" }
+        {"@type": "HowToStep", "text": "WooCommerce Trigger"},
+{"@type": "HowToStep", "text": "Determinar prazo de envio"},
+{"@type": "HowToStep", "text": "Criar Card na lista 'A Enviar'"},
+{"@type": "HowToStep", "text": "Adicionar checklist de itens"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">WooCommerce Trigger</li><li class="mb-2">Determinar prazo de envio</li><li class="mb-2">Criar Card na lista 'A Enviar'</li><li class="mb-2">Adicionar checklist de itens</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>WooCommerce Trigger</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Determinar prazo de envio</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Criar Card na lista 'A Enviar'</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Adicionar checklist de itens</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">ecommerce</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">logistica</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">trello</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">ecommerce</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">logistica</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">trello</span>
                         </div>
                     </div>
 
