--- a/integracoes/wordpress-para-twitter-auto-post-n8n.html
+++ b/integracoes/wordpress-para-twitter-auto-post-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como tuitar novos posts do WordPress automaticamente usando N8N",
       "description": "Aumente o tráfego do seu blog postando automaticamente no Twitter sempre que um artigo for publicado.",
       "step": [
-        { "@type": "HowToStep", "text": "WordPress Trigger (Post Published)" },
-{ "@type": "HowToStep", "text": "Gerar texto curto + Link" },
-{ "@type": "HowToStep", "text": "Twitter API (Post Tweet)" },
-{ "@type": "HowToStep", "text": "Logar execução" }
+        {"@type": "HowToStep", "text": "WordPress Trigger (Post Published)"},
+{"@type": "HowToStep", "text": "Gerar texto curto + Link"},
+{"@type": "HowToStep", "text": "Twitter API (Post Tweet)"},
+{"@type": "HowToStep", "text": "Logar execução"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">WordPress Trigger (Post Published)</li><li class="mb-2">Gerar texto curto + Link</li><li class="mb-2">Twitter API (Post Tweet)</li><li class="mb-2">Logar execução</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>WordPress Trigger (Post Published)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Gerar texto curto + Link</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Twitter API (Post Tweet)</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Logar execução</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">marketing</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">conteudo</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">seo</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">marketing</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">conteudo</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">seo</span>
                         </div>
                     </div>
 
