--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                     <button onclick="switchView('home')" id="nav-home" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap">🏠 Home</button>
                     <button onclick="switchView('generator')" id="nav-generator" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap">🏭 Gerador</button>
                     <button onclick="switchView('library')" id="nav-library" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap">📚 Templates</button>
-                    <button onclick="switchView('integrations')" id="nav-integrations" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap">🔌 Integrações</button>
+                    <!-- INTEGRATIONS_COUNT: 20 -->
+                <!-- INTEGRATIONS_COUNT: 69 -->
+                <button onclick="switchView('integrations')" id="nav-integrations" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap">🔌 Integrações</button>
                     <button onclick="switchView('toolbox')" id="nav-toolbox" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap">🧰 Toolbox</button>
                     <button onclick="switchView('academy')" id="nav-academy" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap">🎓 Academia</button>
                     <button onclick="switchView('debugger')" id="nav-debugger" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap">🚑 Doctor</button>
