--- a/integracoes/calendly-para-zoom-reunioes-n8n.html
+++ b/integracoes/calendly-para-zoom-reunioes-n8n.html
@@ -31,10 +31,10 @@
       "name": "Como criar reuniões no Zoom automaticamente a partir do Calendly com N8N",
       "description": "Integração robusta para gerar links únicos do Zoom quando alguém agenda no Calendly.",
       "step": [
-        { "@type": "HowToStep", "text": "Calendly Trigger" },
-{ "@type": "HowToStep", "text": "Criar Meeting no Zoom via API" },
-{ "@type": "HowToStep", "text": "Atualizar evento no Google Calendar" },
-{ "@type": "HowToStep", "text": "Enviar email de confirmação" }
+        {"@type": "HowToStep", "text": "Calendly Trigger"},
+{"@type": "HowToStep", "text": "Criar Meeting no Zoom via API"},
+{"@type": "HowToStep", "text": "Atualizar evento no Google Calendar"},
+{"@type": "HowToStep", "text": "Enviar email de confirmação"}
       ],
       "tool": [
         { "@type": "HowToTool", "name": "n8n" },
@@ -142,7 +142,7 @@
                     <h2>Passo a Passo no N8N</h2>
                     <p>Siga este roteiro para configurar o workflow:</p>
                     <ol class="steps-list">
-                        <li class="mb-2">Calendly Trigger</li><li class="mb-2">Criar Meeting no Zoom via API</li><li class="mb-2">Atualizar evento no Google Calendar</li><li class="mb-2">Enviar email de confirmação</li>
+                        <li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">1</span><span>Calendly Trigger</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">2</span><span>Criar Meeting no Zoom via API</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">3</span><span>Atualizar evento no Google Calendar</span></li><li class="mb-3 flex gap-3"><span class="flex-shrink-0 flex items-center justify-center h-6 w-6 rounded-full bg-indigo-100 text-indigo-700 text-sm font-bold">4</span><span>Enviar email de confirmação</span></li>
                     </ol>
 
                     <!-- Variações -->
@@ -188,7 +188,7 @@
                     <div class="pt-4 border-t border-slate-200">
                         <p class="text-xs font-bold text-slate-400 uppercase mb-3">Tags Relacionadas</p>
                         <div class="flex flex-wrap gap-2">
-                            <span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">produtividade</span><span class="px-2 py-1 bg-slate-100 text-slate-600 text-xs rounded hover:bg-slate-200 transition-colors cursor-default">agenda</span>
+                            <span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">produtividade</span><span class="px-2 py-1 bg-indigo-50 text-indigo-700 text-xs rounded-full font-medium hover:bg-indigo-100 transition-colors">agenda</span>
                         </div>
                     </div>
 
