--- a/integracoes/google-sheets-para-stripe-n8n.html
+++ b/integracoes/google-sheets-para-stripe-n8n.html
@@ -2,13 +2,15 @@
 <html lang="pt-BR" itemscope itemtype="http://schema.org/Article">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <!-- SEO -->
     <title>Como integrar Google Sheets com Stripe usando N8N | AI Factory</title>
     <meta name="description" content="Automação completa entre Google Sheets e Stripe. Integração CRM sem limites. Tutorial passo a passo e template JSON grátis.">
     <meta name="keywords" content="n8n, Google Sheets, Stripe, automação, integração, workflow">
     <meta name="author" content="AI Factory">
+    <meta name="theme-color" content="#4f46e5">
     <link rel="canonical" href="https://felipejac.github.io/n8n-factory/integracoes/google-sheets-para-stripe-n8n.html">
 
     <!-- Open Graph -->
@@ -17,11 +19,35 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://felipejac.github.io/n8n-factory/integracoes/google-sheets-para-stripe-n8n.html">
     <meta property="og:site_name" content="AI Factory">
+    
+    <!-- Preconnect para performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://cdn.tailwindcss.com">
+    <link rel="dns-prefetch" href="https://cdn.tailwindcss.com">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <style>body { font-family: 'Inter', sans-serif; }</style>
+    <style>
+        * { box-sizing: border-box; }
+        body { 
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+        a { color: inherit; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+        img { max-width: 100%; height: auto; }
+        code { background: #f1f5f9; padding: 2px 6px; border-radius: 4px; font-size: 0.9em; }
+        pre { background: #1e293b; color: #e2e8f0; padding: 16px; border-radius: 8px; overflow-x: auto; }
+        pre code { background: none; padding: 0; color: inherit; }
+        .prose h2 { margin-top: 24px; margin-bottom: 12px; }
+        .prose h3 { margin-top: 18px; margin-bottom: 10px; }
+        @media (max-width: 640px) {
+            body { font-size: 16px; }
+            .prose { font-size: 15px; }
+        }
+    </style>
 
     <!-- Schema.org Data -->
     <script type="application/ld+json">
